[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites.png" type="Texture" id=1]
[ext_resource path="res://Run.gd" type="Script" id=2]
[ext_resource path="res://monitor_mask.png" type="Texture" id=3]
[ext_resource path="res://Action.tscn" type="PackedScene" id=4]
[ext_resource path="res://Numbers.gd" type="Script" id=6]
[ext_resource path="res://bg.png" type="Texture" id=7]
[ext_resource path="res://numbers.png" type="Texture" id=8]
[ext_resource path="res://Outline.gd" type="Script" id=9]
[ext_resource path="res://Creature.tscn" type="PackedScene" id=10]
[ext_resource path="res://woble.gd" type="Script" id=11]

[node name="Run" type="Node2D" groups=["Run"]]
script = ExtResource( 2 )
Act = ExtResource( 4 )
Creature = ExtResource( 10 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 96.0
margin_bottom = 160.0
color = Color( 1, 1, 1, 0 )

[node name="Back" type="Sprite" parent="."]
position = Vector2( 48, 144 )
texture = ExtResource( 7 )
hframes = 3
script = ExtResource( 11 )

[node name="Leds" type="Node2D" parent="."]
position = Vector2( 32, 33 )

[node name="Led" type="ColorRect" parent="Leds"]
visible = false
margin_right = 2.0
margin_bottom = 2.0
color = Color( 0.858824, 0.207843, 0.282353, 1 )

[node name="Led2" type="ColorRect" parent="Leds"]
visible = false
margin_left = 3.0
margin_right = 5.0
margin_bottom = 2.0
color = Color( 0.890196, 0.6, 0.313726, 1 )

[node name="Led3" type="ColorRect" parent="Leds"]
visible = false
margin_left = 6.0
margin_right = 8.0
margin_bottom = 2.0
color = Color( 0.643137, 0.694118, 0.243137, 1 )

[node name="Led4" type="ColorRect" parent="Leds"]
visible = false
margin_left = 9.0
margin_right = 11.0
margin_bottom = 2.0
color = Color( 0.513726, 0.788235, 0.898039, 1 )

[node name="Led5" type="ColorRect" parent="Leds"]
visible = false
margin_left = 12.0
margin_right = 14.0
margin_bottom = 2.0
color = Color( 0.513726, 0.788235, 0.898039, 1 )

[node name="What" type="Node2D" parent="."]

[node name="Creature" parent="What" instance=ExtResource( 10 )]
position = Vector2( 16, 112 )

[node name="Level" type="Sprite" parent="What"]
visible = false
position = Vector2( 16, 144 )
texture = ExtResource( 1 )
hframes = 3
vframes = 26
frame = 54
script = ExtResource( 11 )

[node name="Outline" type="Sprite" parent="What/Level"]
modulate = Color( 0.0431373, 0.0392157, 0.0588235, 1 )
show_behind_parent = true
script = ExtResource( 9 )

[node name="Cheat" type="Sprite" parent="What"]
visible = false
position = Vector2( 16, 176 )
texture = ExtResource( 1 )
hframes = 3
vframes = 26
frame = 30
script = ExtResource( 11 )

[node name="Outline" type="Sprite" parent="What/Cheat"]
modulate = Color( 0.0431373, 0.0392157, 0.0588235, 1 )
show_behind_parent = true
script = ExtResource( 9 )

[node name="Undo" type="Sprite" parent="What"]
visible = false
position = Vector2( 16, 208 )
texture = ExtResource( 1 )
hframes = 3
vframes = 26
frame = 48
script = ExtResource( 11 )

[node name="Outline" type="Sprite" parent="What/Undo"]
modulate = Color( 0.0431373, 0.0392157, 0.0588235, 1 )
show_behind_parent = true
script = ExtResource( 9 )

[node name="Is" type="Sprite" parent="."]
visible = false
position = Vector2( 48, 144 )
texture = ExtResource( 1 )
hframes = 3
vframes = 26
frame = 36
script = ExtResource( 11 )

[node name="Outline" type="Sprite" parent="Is"]
modulate = Color( 0.0431373, 0.0392157, 0.0588235, 1 )
show_behind_parent = true
script = ExtResource( 9 )

[node name="Numbers" type="Node2D" parent="."]
modulate = Color( 0.470588, 0.831373, 0.2, 1 )
script = ExtResource( 6 )

[node name="Number1" type="Sprite" parent="Numbers"]
position = Vector2( 11, 17 )
texture = ExtResource( 8 )
hframes = 3
vframes = 22
script = ExtResource( 11 )
active = true

[node name="Number2" type="Sprite" parent="Numbers"]
position = Vector2( 25, 17 )
texture = ExtResource( 8 )
hframes = 3
vframes = 22
script = ExtResource( 11 )
active = true

[node name="Number3" type="Sprite" parent="Numbers"]
position = Vector2( 39, 17 )
texture = ExtResource( 8 )
hframes = 3
vframes = 22
script = ExtResource( 11 )
active = true

[node name="Number4" type="Sprite" parent="Numbers"]
position = Vector2( 53, 17 )
texture = ExtResource( 8 )
hframes = 3
vframes = 22
script = ExtResource( 11 )
active = true

[node name="MonitorMask" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.164706 )
position = Vector2( 32, 17 )
texture = ExtResource( 3 )
hframes = 3
script = ExtResource( 11 )

[node name="Scrolls" type="Node2D" parent="."]
position = Vector2( 64, 0 )

[node name="Scroll" type="Node2D" parent="Scrolls"]
visible = false
position = Vector2( 16, -16 )

[node name="Errors" type="Node2D" parent="Scrolls"]
visible = false
position = Vector2( 16, 144 )

[node name="Tween" type="Tween" parent="."]

[node name="Ready" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Ready" to="." method="_on_Ready_timeout"]
